# tldr

./: .gitignore  Dockerfile  Makefile  README.md  config.apple-local.example.toml  config.docker.toml  config.example.toml  config.remote.example.toml  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-20-standalone-tts-cli.md  2026-06-21-tts-enhancements.md  2026-06-22-hermes-shell-hook.md  2026-06-22-installation-ux.md  2026-06-22-remote-tts-backend.md  2026-06-22-serve-speak-endpoint-plan.md  2026-06-22-speak-subcommand.md
docs/superpowers/specs/: 2026-06-20-standalone-tts-cli-design.md  2026-06-21-tts-enhancements-design.md  2026-06-22-hermes-shell-hook-design.md  2026-06-22-installation-ux-design.md  2026-06-22-remote-tts-design.md  2026-06-22-speak-subcommand-design.md
hooks/claude/: claude_tts.py
hooks/codex/: codex_tts.py
hooks/hermes/: hermes_tts.py
hooks/omp/: omp_tts.ts  tts.ts
hooks/pi/: tts.ts
scripts/: install_hook.sh
src/echobrief/: audio.py  cli.py  client.py  config.apple-local.example.toml  config.py  config.remote.example.toml  installer.py  logging_setup.py  request.py  server.py  speech.py
src/echobrief/hooks/: claude_tts.py  codex_tts.py  hermes_tts.py  tts.ts
src/tldr/: cli.py  client.py  config.local.example.toml  config.py  config.remote.example.toml  installer.py  logging.conf  logging_setup.py  server.py  speech.py  summarizer.py
src/tldr/hooks/: claude_tts.py  codex_tts.py  hermes_tts.py
src/tts_summarizer/: audio.py  cli.py  client.py  config.py  installer.py  logging_setup.py  request.py  server.py  session.py  speech.py  state.py  summarizer.py
tests/: test_cli.py  test_cli_commands.py  test_config.py  test_hooks.py  test_installation_artifacts.py  test_logging_setup.py  test_request.py  test_server.py  test_session.py  test_speech_audio.py  test_state_client.py  test_summarizer.py
