[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tts-summarizer"
version = "0.0.1"
description = "Harness-neutral local TTS summarizer daemon using MLX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sagebynature" }]
dependencies = ["colorlog>=6.10.1", "fastapi", "uvicorn"]

[project.optional-dependencies]
mlx = ["mlx-audio; platform_system == 'Darwin' and platform_machine == 'arm64'"]
kokoro = ["misaki", "num2words", "spacy", "espeakng-loader", "phonemizer-fork"]

[dependency-groups]
dev = ["ty==0.0.23", "ruff>=0.5", "httpx"]

[project.scripts]
tts-summarizer = "tts_summarizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_summarizer"]
force-include = { "config.remote.example.toml" = "tts_summarizer/config.remote.example.toml", "config.apple-local.example.toml" = "tts_summarizer/config.apple-local.example.toml", "src/tts_summarizer/logging.conf" = "tts_summarizer/logging.conf", "hooks/codex/codex_tts.py" = "tts_summarizer/hooks/codex_tts.py", "hooks/claude/claude_tts.py" = "tts_summarizer/hooks/claude_tts.py", "hooks/omp/tts.ts" = "tts_summarizer/hooks/tts.ts" }

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "hooks",
  "tests",
  "README.md",
  "CHANGELOG.md",
  "Makefile",
  "config.remote.example.toml",
  "config.apple-local.example.toml",
]

[tool.ty.environment]
root = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
upload_to_pypi = false
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.branches.main]
