[project]
name = "tts-summarizer"
version = "0.0.1"
description = "Harness-neutral local TTS summarizer daemon using MLX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sagebynature" }]
dependencies = ["colorlog>=6.10.1", "fastapi", "uvicorn"]

[project.optional-dependencies]
mlx = ["mlx-audio; platform_system == 'Darwin' and platform_machine == 'arm64'"]
kokoro = ["misaki", "num2words", "spacy", "espeakng-loader", "phonemizer-fork"]

[dependency-groups]
dev = ["ty==0.0.23", "ruff>=0.5", "httpx"]

[project.scripts]
tts-summarizer = "tts_summarizer.cli:main"

[tool.ty.environment]
root = ["src"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
upload_to_pypi = false
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.branches.main]
