[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr"
version = "0.0.1"
description = "Harness-neutral local speech brief daemon for agent responses"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "sagebynature" }]
dependencies = ["colorlog>=6.10.1", "fastapi", "uvicorn"]

[project.optional-dependencies]
mlx = ["mlx-audio; platform_system == 'Darwin' and platform_machine == 'arm64'"]
kokoro = ["misaki", "num2words", "spacy", "espeakng-loader", "phonemizer-fork"]

[dependency-groups]
dev = ["ty==0.0.23", "ruff>=0.5", "httpx"]

[tool.uv]
package = true

[project.scripts]
tldr = "tldr.cli:main"

[tool.ty.environment]
root = ["src"]

[tool.setuptools.package-data]
tldr = ["*.toml", "hooks/*", "logging.conf"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
upload_to_pypi = false
commit_message = "{version}\n\n[skip ci]"

[tool.semantic_release.branches.main]
